[gd_scene load_steps=13 format=2]

[ext_resource path="res://fonts/RealHorror-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://player/ActionButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui2D/settings.gd" type="Script" id=3]
[ext_resource path="res://fonts/LastChristmas_PERSONAL_USE_ONLY.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[node name="settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 512.0
margin_top = 300.0
margin_right = -512.0
margin_bottom = -300.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -529.0
margin_top = -318.0
margin_right = 529.0
margin_bottom = 319.0
color = Color( 0.239216, 0.239216, 0.239216, 1 )

[node name="button" type="VBoxContainer" parent="ColorRect"]
margin_left = 29.0
margin_top = 458.0
margin_right = 211.0
margin_bottom = 737.0

[node name="audio" type="Button" parent="ColorRect/button"]
margin_right = 182.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 6 )
text = "AUDIO"

[node name="Button2" type="Button" parent="ColorRect/button"]
margin_top = 35.0
margin_right = 182.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 6 )
text = "resolution"

[node name="Button3" type="Button" parent="ColorRect/button"]
margin_top = 70.0
margin_right = 182.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 6 )
text = "controls"

[node name="Button4" type="Button" parent="ColorRect/button"]
margin_top = 105.0
margin_right = 182.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 6 )
text = "KEYS"

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 387.0
margin_top = 245.0
margin_right = 489.0
margin_bottom = 276.0
custom_fonts/font = SubResource( 5 )
text = "BACK"

[node name="audio" type="Control" parent="."]
visible = false
margin_left = -251.0
margin_top = -312.0
margin_right = 522.0
margin_bottom = 245.0

[node name="Label" type="Label" parent="audio"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -46.0
margin_top = 24.0
margin_right = 46.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 7 )
text = "Audio"

[node name="Label2" type="Label" parent="audio"]
anchor_top = 0.239
anchor_right = 0.119
anchor_bottom = 0.33
margin_top = -0.123001
margin_right = 0.0130005
margin_bottom = 0.189987
custom_fonts/font = SubResource( 7 )
text = "Volume"

[node name="Label3" type="Label" parent="audio"]
anchor_top = 0.239
anchor_right = 0.119
anchor_bottom = 0.33
margin_top = 143.877
margin_right = 39.013
margin_bottom = 144.19
custom_fonts/font = SubResource( 7 )
text = "Music"

[node name="HSlider" type="HSlider" parent="audio"]
anchor_top = 0.343
anchor_right = 0.794
anchor_bottom = 0.372
margin_left = 5.0
margin_top = -0.0510101
margin_right = 0.237976
margin_bottom = -0.20401

[node name="HSlider2" type="HSlider" parent="audio"]
anchor_top = 0.343
anchor_right = 0.794
anchor_bottom = 0.372
margin_left = 5.0
margin_top = 151.949
margin_right = 0.237976
margin_bottom = 151.796

[node name="resolution" type="Control" parent="."]
margin_left = -302.0
margin_top = -312.0
margin_right = 522.0
margin_bottom = 245.0

[node name="Label" type="Label" parent="resolution"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -90.5
margin_top = 24.0
margin_right = 90.5
margin_bottom = 75.0
custom_fonts/font = SubResource( 7 )
text = "Resolution"

[node name="Label2" type="Label" parent="resolution"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -149.5
margin_right = 290.0
margin_bottom = -98.5
custom_fonts/font = SubResource( 7 )
text = "Windows Mode"

[node name="OptionButton" type="CheckButton" parent="resolution"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 21.0
margin_top = -85.5
margin_right = 97.0
margin_bottom = -45.5
custom_fonts/font = SubResource( 8 )
text = "FullScreen"

[node name="OptionButton3" type="CheckButton" parent="resolution"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 181.0
margin_top = -85.5
margin_right = 339.0
margin_bottom = -45.5
custom_fonts/font = SubResource( 8 )
text = "Borderlezss"

[node name="Label3" type="Label" parent="resolution"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -37.5
margin_right = 290.0
margin_bottom = 13.5
custom_fonts/font = SubResource( 7 )
text = "Windows Size"

[node name="OptionButton2" type="OptionButton" parent="resolution"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 24.0
margin_top = 34.5
margin_right = 153.0
margin_bottom = 54.5

[node name="control" type="Control" parent="."]
visible = false
margin_left = -302.0
margin_top = -312.0
margin_right = 522.0
margin_bottom = 245.0

[node name="Label" type="Label" parent="control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -67.5
margin_top = 24.0
margin_right = 67.5
margin_bottom = 75.0
custom_fonts/font = SubResource( 7 )
text = "Controls"

[node name="keys" type="Control" parent="."]
visible = false
margin_left = -302.0
margin_top = -312.0
margin_right = 522.0
margin_bottom = 245.0

[node name="KEY" type="HBoxContainer" parent="keys"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -134.5
margin_right = 200.0
margin_bottom = 6.5

[node name="VBoxContainer" type="VBoxContainer" parent="keys/KEY"]
margin_right = 72.0
margin_bottom = 141.0

[node name="Label" type="Label" parent="keys/KEY/VBoxContainer"]
margin_right = 72.0
margin_bottom = 25.0
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "FORWARD"

[node name="Label2" type="Label" parent="keys/KEY/VBoxContainer"]
margin_top = 29.0
margin_right = 72.0
margin_bottom = 54.0
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "BACKWARD"

[node name="Label3" type="Label" parent="keys/KEY/VBoxContainer"]
margin_top = 58.0
margin_right = 72.0
margin_bottom = 83.0
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "LEFT"

[node name="Label4" type="Label" parent="keys/KEY/VBoxContainer"]
margin_top = 87.0
margin_right = 72.0
margin_bottom = 112.0
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "RIGHT"

[node name="Label5" type="Label" parent="keys/KEY/VBoxContainer"]
margin_top = 116.0
margin_right = 72.0
margin_bottom = 141.0
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "JUMP"

[node name="VBoxContainer2" type="VBoxContainer" parent="keys/KEY"]
margin_left = 76.0
margin_right = 88.0
margin_bottom = 141.0

[node name="ActionButton" parent="keys/KEY/VBoxContainer2" instance=ExtResource( 2 )]
margin_right = 12.0
margin_bottom = 25.0
size_flags_vertical = 7

[node name="ActionButton2" parent="keys/KEY/VBoxContainer2" instance=ExtResource( 2 )]
margin_top = 29.0
margin_right = 12.0
margin_bottom = 54.0
size_flags_vertical = 7
action = "move_back"

[node name="ActionButton3" parent="keys/KEY/VBoxContainer2" instance=ExtResource( 2 )]
margin_top = 58.0
margin_right = 12.0
margin_bottom = 83.0
size_flags_vertical = 7
action = "move_left"

[node name="ActionButton4" parent="keys/KEY/VBoxContainer2" instance=ExtResource( 2 )]
margin_top = 87.0
margin_right = 12.0
margin_bottom = 112.0
size_flags_vertical = 7
action = "move_right"

[node name="ActionButton5" parent="keys/KEY/VBoxContainer2" instance=ExtResource( 2 )]
margin_top = 116.0
margin_right = 12.0
margin_bottom = 141.0
size_flags_vertical = 7
action = "jump"

[node name="Label" type="Label" parent="keys"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -46.0
margin_top = 24.0
margin_right = 46.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 7 )
text = "Keys"

[connection signal="pressed" from="ColorRect/button/audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="ColorRect/button/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="ColorRect/button/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="ColorRect/button/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="resolution/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="resolution/OptionButton3" to="." method="_on_OptionButton3_pressed"]
